# ifconfig-api

./: .dockerignore  .gitignore  Dockerfile  LICENSE  docker-compose.yml  pyproject.toml
ifconfig/: app.py  dependency.py
ifconfig/middlewares/: cors.py
tests/: test_app.py
